<resources>
    <string name="app_name">Scan Wi-Fi</string>
    <string name="action_settings">Settings</string>
    <string name="button_scan">Scan</string>
    <string name="label_bssid">BSSID:</string>
    <string name="label_ssid">SSID:</string>
    <string name="label_venue_name">Venue Name:</string>
    <string name="label_level">Level:</string>
    <string name="label_capabilities">Capabilities:</string>
    <string name="label_network_id">Network ID:</string>
    <string name="label_status">Status:</string>
    <string name="scanning">Scanning...</string>
</resources>
